--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
   max-width: 1440px;
   font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 }
 
 main {
@@ -139,7 +140,7 @@ footer {
 }
 
 .width-footer {
-  width: 555px;
+  width: 100%;
 }
 
 .contact {
